--- a/style.css
+++ b/style.css
@@ -327,8 +327,10 @@ html {
     }
 
     .about_image {
+        display: flex;
         justify-content: center;
         align-items: center;
+      
     }
 
     .about_image img {
@@ -528,6 +530,9 @@ html {
         color: rgb(255, 255, 255);
     }
 
+    .service-page2{
+        margin-top: 5em;
+    }
 }
 
 @media only screen and (max-width:1200px) {
@@ -552,6 +557,11 @@ html {
         width: 100%;
         height: 100%;
         z-index: -1;
+    }
+
+    .header a {
+        font-family: "DM Sans", sans-serif;
+        font-weight: 1000;
     }
 
     .logo {
@@ -986,6 +996,18 @@ html {
     .link :hover {
         color: rgb(255, 255, 255);
     }
+
+    .service-page2{
+        margin-top: 2em;
+        text-align: center;
+        background-color: #1B1B1B;
+        color: white;
+        text-align: center;
+        min-width: 300px;
+        font-size: 40px;
+    }
+
+
 }
 
 /*breakpoint*/
@@ -996,6 +1018,11 @@ html {
 
     .icons {
         display: inline-flex;
+    }
+
+    .header a {
+        font-family: "DM Sans", sans-serif;
+        font-weight: 1000;
     }
 
     #check:checked~.icons #menu-icon {
@@ -1416,5 +1443,16 @@ html {
     .link :hover {
         color: rgb(255, 255, 255);
     }
+
+    .service-page2{
+        margin-top: 3em;
+        text-align: center;
+        background-color: #1B1B1B;
+        color: white;
+        text-align: center;
+        min-width: 300px;
+        font-size: 30px;
+    }
+
 
 }
